--- a/web/html/chamado/index.html
+++ b/web/html/chamado/index.html
@@ -4,7 +4,7 @@
      author:      luciano dos santos
      contact:     https://www.linkedin.com/in/luciano-dos-santos-satiro
      created:     23/06/2023
-     revision:    25/07/2024
+     revision:    09/09/2024
      rule 1:      sem acento
      rule 2:      restante em minusculo
      description: formulario para abertura de chamado tecnico
@@ -79,6 +79,7 @@
       </style>
    </head>
 
+   <!-- corpo da pagina -->
    <body>
       <div class="container">
          <form name="chamado" action="registrar.php" method="post" accept-charset='utf-8'>
